Этап 3. Добавляем рекомендательный сервис